[tool.poetry]
name = "kmarkdown-it"
version = "0.1.1-alpha01"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
markdown-it-py = "^2.1.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
