[tool.poetry]
name = "kmarkdown-it-py"
version = "0.1.1-alpha01"
description = "基于markdown-it-py开发的KMarkdown Parser"
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
license = "MIT"
readme = "README.MD"
repository = "https://github.com/ssttkkl/kmarkdown-it-py"
keywords = ["markdown-it-py", "kaiheila", "kook", "kmarkdown"]
packages = [
    { include = "kmarkdown_it" }
]

[tool.poetry.dependencies]
python = "^3.7"
markdown-it-py = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
